{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 35,
  "lineage": "56995f58-0343-a471-4e07-76626c77dd1e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:security-group/sg-02f63106385ea3de9",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "worker_group_mgmt_one*"
                ]
              }
            ],
            "id": "sg-02f63106385ea3de9",
            "name": "worker_group_mgmt_one20201214201813350800000003",
            "tags": {
              "Name": "worker_group_mgmt_one"
            },
            "vpc_id": "vpc-0eea6ded02cc18b8d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:security-group/sg-01ec6a932c5c50918",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "worker_group_mgmt_two*"
                ]
              }
            ],
            "id": "sg-01ec6a932c5c50918",
            "name": "worker_group_mgmt_two20201214201813350600000002",
            "tags": {
              "Name": "worker_group_mgmt_two"
            },
            "vpc_id": "vpc-0eea6ded02cc18b8d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:subnet/subnet-098b4ff86fffbffc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "default_for_az": false,
            "id": "subnet-098b4ff86fffbffc9",
            "map_public_ip_on_launch": false,
            "owner_id": "968036092797",
            "state": "available",
            "tags": {
              "Name": "training-vpc-private-us-east-2a",
              "kubernetes.io/cluster/training-vpc-1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eea6ded02cc18b8d"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:subnet/subnet-02be000bc8bb8f115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "default_for_az": false,
            "id": "subnet-02be000bc8bb8f115",
            "map_public_ip_on_launch": false,
            "owner_id": "968036092797",
            "state": "available",
            "tags": {
              "Name": "training-vpc-private-us-east-2b",
              "kubernetes.io/cluster/training-vpc-1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eea6ded02cc18b8d"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:subnet/subnet-0c5ce95aad4ea8e0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "default_for_az": false,
            "id": "subnet-0c5ce95aad4ea8e0c",
            "map_public_ip_on_launch": false,
            "owner_id": "968036092797",
            "state": "available",
            "tags": {
              "Name": "training-vpc-private-us-east-2c",
              "kubernetes.io/cluster/training-vpc-1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eea6ded02cc18b8d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:vpc/vpc-0eea6ded02cc18b8d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bacd04c5ec1d429f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-46b3252d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "10.0.0.0/16"
                ]
              }
            ],
            "id": "vpc-0eea6ded02cc18b8d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0931d87f70ade5f44",
            "owner_id": "968036092797",
            "state": "available",
            "tags": {
              "Name": "training-vpc",
              "kubernetes.io/cluster/training-vpc-1": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:security-group/sg-0d129e35201626317",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0d129e35201626317",
            "ingress": [],
            "name": "training-vpc-120201214202057464700000004",
            "name_prefix": "training-vpc-1",
            "owner_id": "968036092797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "training-vpc-1-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eea6ded02cc18b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:security-group/sg-08a1af353a9be2313",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-08a1af353a9be2313",
            "ingress": [],
            "name": "training-vpc-120201214202057464700000003",
            "name_prefix": "training-vpc-1",
            "owner_id": "968036092797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "training-vpc-1-eks_worker_sg",
              "kubernetes.io/cluster/training-vpc-1": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eea6ded02cc18b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1037460576",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d129e35201626317",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1636736043",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d129e35201626317",
            "self": false,
            "source_security_group_id": "sg-08a1af353a9be2313",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3732978496",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08a1af353a9be2313",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-335600422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08a1af353a9be2313",
            "self": false,
            "source_security_group_id": "sg-0d129e35201626317",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2048610653",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08a1af353a9be2313",
            "self": false,
            "source_security_group_id": "sg-0d129e35201626317",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-265006664",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08a1af353a9be2313",
            "self": false,
            "source_security_group_id": "sg-08a1af353a9be2313",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}